--- a/k8s.yml
+++ b/k8s.yml
@@ -15,6 +15,13 @@ spec:
       containers:
       - image: okteto/go-getting-started:hello-world
         name: hello-world
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"        
 
 ---
 
